src/components/RNavbar/RNavbar.css
.Navbar {
  background: white; 
  padding: 0 20px;
  border-bottom: 1px solid #E0E0E0;
  position: fixed;
  width: 100%;
  top: 0px;
  z-index: 1;
}

.Navbar nav {
  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.LogoAndTitle {
  font-family: 'Cookie', cursive;
  display: flex;
  align-items: center;
}

.Title {
  font-family: 'Cookie', cursive;
  font-size: 34px;
  color: black;
  padding-left: 16px;
}

.Navbar_Instagram_icon {
  font-size: 32px;
  color: #3b3b3b;
  border-right: 1px solid #4a4a4a;
  padding-right: 16px;
}

@media (max-width: 768px){ 
  .Search {
    display: none;
  }
  .PostPhotoButton {
    display: none;
  }
  .Navbar {
    padding: 0 5px;
  }
  .Navbar nav {
    height: 60px;
  }
  .Navbar_Instagram_icon {
    font-size: 28px;
    margin: 5px 10px;
  }
  .Title {
    font-size: 28px;
    padding-left: 8px;
  }
} 

  
.Search_Box {
  width: 200px;
  border: 1px solid #E0E0E0;
  padding: 3px 6px;
  border-radius: 2px;
  background: #f7f7f7;
  text-align: center;
  font-size: 13px;
}

.Search::placeholder {
  color: #b1b1b1;
}

.Search:focus {
  width: 250px;
  background: white;
  outline: none;
  text-align: left;
  transition: width 0.2s;
}

.LogInBtn {
  background: #039BE5;
  color: white;
  border: none;
  padding: 6px 10px;
  border-radius: 3px;
}

.SignUpBtn {
  background: white;
  color: #039BE5;
  border: none;
  padding: 6px 10px;
  border-radius: 3px;
}

